# tradele

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
.agents/skills/database-migrations/: SKILL.md
app/: container.py  dependencies.py  main.py
app/dtos/: auth_dtos.py  market_dtos.py  portfolio_dtos.py  trade_dtos.py  user_dtos.py
app/migrations/: m0001_create_users.py  m0002_create_portfolios_and_trades.py
app/repositories/: portfolio_repository.py  trade_repository.py  user_repository.py
app/routers/: auth.py  health.py  market.py  portfolio.py  trades.py  users.py
app/services/: auth_service.py  database_service.py  logger_service.py  market_data_service.py  portfolio_service.py  settings_service.py  trade_service.py  user_service.py
tests/: conftest.py
tests/repositories/: test_portfolio_repository.py  test_trade_repository.py  test_user_repository.py
tests/routers/: test_auth.py  test_market.py  test_portfolio.py  test_trades.py  test_users.py
tests/services/: test_auth_service.py  test_database_service.py  test_logger_service.py  test_market_data_service.py  test_portfolio_service.py  test_settings_service.py  test_trade_service.py  test_user_service.py
