[project]
name = "tradele"
version = "0.1.0"
description = "Backend API for Tradele, a daily stock-trading guessing game"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "ipykernel>=7.3.0",
    "pyjwt[crypto]>=2.13.0",
    "uvicorn[standard]>=0.51.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
reportExplicitAny = false
reportAny = false
reportUnusedCallResult = false
